# LOLTopNews

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_USAGE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api.sh
.github/workflows/: ci.yml
app/: __init__.py  api.py  email_client.py  email_template.py  main.py  scheduler.py  subscribers.py
app/agents/: llm.py  state.py  tools.py  workflow.py
app/agents/nodes/: analyzer.py  extractor.py  summarizer.py
app/crawlers/: base.py  lol_official.py
app/data/: sample_patch_14.24.txt
app/data/cache/: 26.2.json  26.3.json
app/data/raw_patches/: latest_with_crawler.txt
data/cache/: 14.24.json  latest.json
docs/: INDEX.md  design.md
docs/plan/: version-hub-and-notifications.md
frontend/: Dockerfile  README.md
frontend/src/: App.tsx  index.css
frontend/src/components/: ChampionChanges.tsx  ImpactAnalysis.tsx  SubscribeForm.tsx  Summary.tsx  TierList.tsx  VersionSelector.tsx
frontend/src/data/: mockData.ts
frontend/src/services/: api.ts
scripts/: test_crawler.py  test_crawler_simple.py  test_extractor.py  test_fetch_latest.py  test_real_lol_url.py
tests/: test_api.py  test_caching.py  test_crawler.py  test_email.py  test_main.py  test_scheduler.py  test_subscribers.py  test_versions.py  test_workflow.py
